--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,16 +16,17 @@
         <ImageView
             android:id="@+id/splash"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="120dp"
             android:src="@drawable/app_logo" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorText"
+            android:layout_marginBottom="80dp"
             android:text="@string/app_name"
             android:textAlignment="center"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
