--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,16 +19,17 @@
             android:id="@+id/splash"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:src="@drawable/app_logo" />
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/finapp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorText"
-            android:text="@string/app_name"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:layout_marginBottom="60dp"/>
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textColor="@color/colorText"-->
+            <!--android:text="@string/app_name"-->
+            <!--android:textAlignment="center"-->
+            <!--android:textSize="16sp"-->
+            <!--android:layout_marginBottom="60dp"/>-->
 
         <EditText
             android:id="@+id/edtEmail"
