--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,20 +13,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--<ImageView-->
+            <!--android:id="@+id/splash"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="120dp"-->
+            <!--android:src="@drawable/app_logo" />-->
+
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textColor="@color/colorText"-->
+            <!--android:layout_marginBottom="80dp"-->
+            <!--android:text="@string/app_name"-->
+            <!--android:textAlignment="center"-->
+            <!--android:textSize="20sp" />-->
+
         <ImageView
             android:id="@+id/splash"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:src="@drawable/app_logo" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorText"
-            android:layout_marginBottom="80dp"
-            android:text="@string/app_name"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+            android:layout_height="90dp"
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/finapp" />
 
     </LinearLayout>
 
